// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applySmoothTransition > 中央付近の単一ジャンプに対して、滑らかな遷移が適用される 1`] = `
[
  0,
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.84375,
  0.9803240740740741,
  1,
  1,
]
`;

exports[`applySmoothTransition > 先頭近くのジャンプでは、遷移がデータの端に合わせて切り詰められる 1`] = `
[
  0.15625,
  0.84375,
  1,
  1,
  1,
]
`;

exports[`applySmoothTransition > 十分に離れた複数のジャンプに対して、それぞれ独立に遷移が適用される 1`] = `
[
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6238425925925927,
  0.84375,
  0.9803240740740741,
  1.0196759259259258,
  1.15625,
  1.3761574074074074,
  1.6238425925925926,
  1.84375,
  1.980324074074074,
  2,
]
`;

exports[`applySmoothTransition > 末尾近くのジャンプでは、遷移がデータの端に合わせて切り詰められる 1`] = `
[
  0,
  0,
  0,
  0.15625,
  0.84375,
]
`;

exports[`applySmoothTransition > 隣接するジャンプでは遷移長が自動的に縮小され重複が避けられる 1`] = `
[
  0.019675925925925927,
  0.15625,
  0.37615740740740744,
  0.6439056605795611,
  1.003074363425926,
  1.363882726766118,
  1.6164413473079562,
  1.840675636574074,
  1.9799369320130316,
]
`;
